--- a/src/main/resources/lichnui_kobinetu/lk_uch/o_sobr/o_sobr_uch_1.html
+++ b/src/main/resources/lichnui_kobinetu/lk_uch/o_sobr/o_sobr_uch_1.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="../style/shared.css">
-    <link rel="stylesheet" type="text/css" href="../style/z_sobr_uch_2.css">
+    <link rel="stylesheet" type="text/css" href="/style/shared.css">
+    <link rel="stylesheet" type="text/css" href="/style/z_sobr_uch_2.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Exo+2">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <title>SK_JS</title>
@@ -18,7 +18,7 @@
         <li class="nav_item"><a>Помощь</a></li>
         <li class="nav_item"><a>Контакты</a></li>
         <li class="nav_item"><button class="nav_btn">Войти</button></li>
-        <li class="nav_item"><a href="../signin.html">Зарегистрироваться</a></li>
+        <li class="nav_item"><a href="/signin.html">Зарегистрироваться</a></li>
     </ul>
 </div>
 <div class="container">
@@ -46,12 +46,12 @@
             <ul class="nofade1">
                 <li>Чьи интересы представляете?</li>
                 <li class="oneline"><a>Выберите из списка</a></li>
-                <img src="../img/down_arrow.svg" class="arrw1">
+                <img src="/img/down_arrow.svg" class="arrw1">
             </ul>
             <ul class="nofade2">
                 <li>Статус участника</li>
                 <li class="oneline"><a>Выберите из списка</a></li>
-                <img src="../img/down_arrow.svg" class="arrw2">
+                <img src="/img/down_arrow.svg" class="arrw2">
             </ul>
             <p class="fader">Паспортные данные</p>
             <ul class="inline_3 fader">
@@ -96,10 +96,10 @@
             </ul>
             <p class="fader">Прикрепленные документы участника</p>
             <ul class="fader">
-                <li class="oneline"><a>Документ, удостоверяющий личность</a><img src="../img/cross.svg" class="cross1"></li>
+                <li class="oneline"><a>Документ, удостоверяющий личность</a><img src="/img/cross.svg" class="cross1"></li>
             </ul>
             <ul class="fader">
-                <li class="oneline"><a>Документы, подтверждающие полномочия руководителя или иного лица на осуществление действий от имени заявителя</a><img src="../img/cross.svg" class="cross2"></li>
+                <li class="oneline"><a>Документы, подтверждающие полномочия руководителя или иного лица на осуществление действий от имени заявителя</a><img src="/img/cross.svg" class="cross2"></li>
                 <label for="file">
                     Добавить документ
                     <input type="file" id="file" />
@@ -146,7 +146,7 @@
         </div>
     </div>
 </div>
-<script src="../jquery/jquery-3.6.0.js"></script>
+<script src="/jquery/jquery-3.6.0.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/jquery.maskedinput@1.4.1/src/jquery.maskedinput.min.js" type="text/javascript"></script>
 <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
