--- a/src/main/resources/pwd_restore.html
+++ b/src/main/resources/pwd_restore.html
@@ -34,21 +34,21 @@
       </ul>
     </div>
 
-    <div class="base_bg">
-      <div class="base">
-        <ul>
-          <li class="base_logo"><a href="#"><img src="/img/Logo.svg" /></a></li>
-          <li class="base_item1"><a>Выйти</a></li>
-        </ul>
-        <ul class="base_links">
-          <li class="base_item2">Главная</li>
-          <li class="base_item2">Реестр собраний</li>
-          <li class="base_item2">Помощь</li>
-          <li class="base_item2">Контакты</li>
-        </ul>
-        <p class="copyright">© 2011-2022 Оператор торговой площадки - ООО «ТендерСтандарт». Все права защищены.</p>
-      </div>
+    <div class="base_bg"></div>
+    <div class="base">
+      <ul>
+        <li class="base_logo"><a href="#"><img src="/img/Logo.svg" /></a></li>
+        <li class="base_item1"><a>Выйти</a></li>
+      </ul>
+      <ul class="base_links">
+        <li class="base_item2">Главная</li>
+        <li class="base_item2">Реестр собраний</li>
+        <li class="base_item2">Помощь</li>
+        <li class="base_item2">Контакты</li>
+      </ul>
+      <p class="copyright">© 2011-2022 Оператор торговой площадки - ООО «ТендерСтандарт». Все права защищены.</p>
     </div>
+  </div>
   </div>
 </div>
 <script src="jquery/jquery-3.6.0.js"></script>
