--- a/src/main/resources/lichnui_kobinetu/lk_uch/o_sobr/o_sobr_uch_4.html
+++ b/src/main/resources/lichnui_kobinetu/lk_uch/o_sobr/o_sobr_uch_4.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="../style/shared.css">
-    <link rel="stylesheet" type="text/css" href="../style/z_sobr_uch_4.css">
+    <link rel="stylesheet" type="text/css" href="/style/shared.css">
+    <link rel="stylesheet" type="text/css" href="/style/z_sobr_uch_4.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Exo+2">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <title>SK_JS</title>
@@ -18,7 +18,7 @@
         <li class="nav_item"><a>Помощь</a></li>
         <li class="nav_item"><a>Контакты</a></li>
         <li class="nav_item"><button class="nav_btn">Войти</button></li>
-        <li class="nav_item"><a href="../signin.html">Зарегистрироваться</a></li>
+        <li class="nav_item"><a href="/signin.html">Зарегистрироваться</a></li>
     </ul>
 </div>
 
@@ -54,8 +54,8 @@
                 <li class="text hed"><b>Протокол собрания</b></li>
             </ul>
             <ul>
-                <li class="svg"><img src="../../../img/doc.svg"/><b><u>Журнал уведомлений участников</u></b></li>
-                <li><img src="../../../img/doc.svg"/><b><u>Протокол собрания</u></b></li>
+                <li class="svg"><img src="/img/doc.svg"/><b><u>Журнал уведомлений участников</u></b></li>
+                <li><img src="/img/doc.svg"/><b><u>Протокол собрания</u></b></li>
             </ul>
             <ul>
                 <li><button class="down">Скачать журнал</button></li>
@@ -63,24 +63,23 @@
             </ul>
         </div>
 
-        <div class="base_bg">
-            <div class="base">
-                <ul>
-                    <li class="base_logo"><a href="#"><img src="/img/Logo.svg" /></a></li>
-                    <li class="base_item1"><a>Выйти</a></li>
-                </ul>
-                <ul class="base_links">
-                    <li class="base_item2">Главная</li>
-                    <li class="base_item2">Реестр собраний</li>
-                    <li class="base_item2">Помощь</li>
-                    <li class="base_item2">Контакты</li>
-                </ul>
-                <p class="copyright">© 2011-2022 Оператор торговой площадки - ООО «ТендерСтандарт». Все права защищены.</p>
-            </div>
+        <div class="base_bg"></div>
+        <div class="base">
+            <ul>
+                <li class="base_logo"><a href="#"><img src="/img/Logo.svg" /></a></li>
+                <li class="base_item1"><a>Выйти</a></li>
+            </ul>
+            <ul class="base_links">
+                <li class="base_item2">Главная</li>
+                <li class="base_item2">Реестр собраний</li>
+                <li class="base_item2">Помощь</li>
+                <li class="base_item2">Контакты</li>
+            </ul>
+            <p class="copyright">© 2011-2022 Оператор торговой площадки - ООО «ТендерСтандарт». Все права защищены.</p>
         </div>
     </div>
 </div>
-<script src="../jquery/jquery-3.6.0.js"></script>
+<script src="/jquery/jquery-3.6.0.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/jquery.maskedinput@1.4.1/src/jquery.maskedinput.min.js" type="text/javascript"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
