--- a/src/main/resources/signin.html
+++ b/src/main/resources/signin.html
@@ -42,7 +42,7 @@
       </ul>
     </div>
 
-  <div class="base_bg">
+    <div class="base_bg"></div>
     <div class="base">
       <ul>
         <li class="base_logo"><a href="#"><img src="/img/Logo.svg" /></a></li>
@@ -56,7 +56,6 @@
       </ul>
       <p class="copyright">© 2011-2022 Оператор торговой площадки - ООО «ТендерСтандарт». Все права защищены.</p>
     </div>
-  </div>
   </div>
 </div>
 <script src="jquery/jquery-3.6.0.js"></script>
