--- a/src/main/resources/lichnui_kobinetu/lk_uch/z_sobr/z_sobr_uch_7.html
+++ b/src/main/resources/lichnui_kobinetu/lk_uch/z_sobr/z_sobr_uch_7.html
@@ -24,7 +24,16 @@
 <div class="container">
   <div class="content">
 
-    <div class="bc"><a href="/main.html">Главная</a>&nbsp;/&nbsp;<a href="">Личный кабинет участника</a>&nbsp;/&nbsp;<a href="">Участие в собраниях</a>&nbsp;/&nbsp;<a href="#">Карточка собрания</a></div>
+    <div class="ogl">
+      <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a class="anti_tekst"  href="/main.html">Главная</a></li>
+          <li class="breadcrumb-item"><a class="anti_tekst"  href="#">Личный кабинет участника</a></li>
+          <li class="breadcrumb-item"><a class="anti_tekst"  href="#">Участие в собраниях</a></li>
+          <li class="breadcrumb-item active" aria-current="page">Карточка собрания</li>
+        </ol>
+      </nav>
+    </div>
 
     <p class="heading">Карточка собрания: 1014-заочное</p>
 
