--- a/src/main/resources/lichnui_kobinetu/lk_oper/lk2_oper.html
+++ b/src/main/resources/lichnui_kobinetu/lk_oper/lk2_oper.html
@@ -99,7 +99,7 @@
 
         <div class="container">
                 <div class="content">
-                    <div class="base_bg">
+                    <div class="base_bg"></div>
                         <div class="base">
                             <ul>
                                 <li class="base_logo"><a href="#"><img src="/img/Logo.svg" /></a></li>
@@ -113,7 +113,6 @@
                             </ul>
                             <p class="copyright">© 2011-2022 Оператор торговой площадки - ООО «ТендерСтандарт». Все права защищены.</p>
                         </div>
-                    </div>
                 </div>
             </div>
 
