--- a/src/main/resources/lichnui_kobinetu/lk_org/o_sobr/o_sobr_org_5.html
+++ b/src/main/resources/lichnui_kobinetu/lk_org/o_sobr/o_sobr_org_5.html
@@ -118,10 +118,10 @@
                     <li class="base_item1"><a>Выйти</a></li>
                 </ul>
                 <ul class="base_links">
-                    <li class="base_item2">Главная</li>
-                    <li class="base_item2">Реестр собраний</li>
-                    <li class="base_item2">Помощь</li>
-                    <li class="base_item2">Контакты</li>
+                    <li class="base_item2"><a class="footer_txt" href="../../../main.html" >Главная</a></li>
+                    <li class="base_item2"><a class="footer_txt" href="../../../reestr.html">Реестр собраний</a></li>
+                    <li class="base_item2"><a class="footer_txt" href="../../../help/help_1.html">Помощь</a></li>
+                    <li class="base_item2"><a class="footer_txt" href="../../../help/contacts.html">Контакты</a></li>
                 </ul>
                 <p class="copyright">© 2011-2022 Оператор торговой площадки - ООО «ТендерСтандарт». Все права защищены.</p>
             </div>
