--- a/src/main/resources/lichnui_kobinetu/lk_org/lk3_org.html
+++ b/src/main/resources/lichnui_kobinetu/lk_org/lk3_org.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="../../style/shared.css">
     <link rel="stylesheet" type="text/css" href="../../style/lk.css">
     <link rel="stylesheet" type="text/css" href="../../style/lk3.css">
-    <link rel="stylesheet" type="text/css" href="../../style/shared.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Exo+2">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <title>SK_JS</title>
@@ -81,8 +81,8 @@
 
         <div class="container">
                 <div class="content">
-                    <div class="base_bglk"></div>
-                    <div class="baselk">
+                    <div class="base_bg"></div>
+                    <div class="base">
                         <ul>
                             <li class="base_logo"><a href="#"><img src="/img/Logo.svg" /></a></li>
                             <li class="base_item1"><a>Выйти</a></li>
@@ -102,7 +102,7 @@
     <div class="table">
         <div class="table_item"></div>
     </div>
-    <script src="../../../../../../11/SK_J/src/main/resources/jquery/jquery-3.6.0.js"></script>
+    <script src="/jquery/jquery-3.6.0.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
