fix foreword  Igor

--- a/src/main/resources/reg_organizatorov/reg_org_fl.html
+++ b/src/main/resources/reg_organizatorov/reg_org_fl.html
@@ -75,27 +75,27 @@
 
         <div class="unn">
             <label for="inputEmail4" class="txt_obsh">ИНН*</label>
-            <input type="email" class="forms4" id="inputEmail4" placeholder="000000000000">
+            <input type="text" class="forms4" id="inputEmail4" placeholder="000000000000">
         </div>
 
                 <div class="codorg">
                     <label for="inputPassword5" class="txt_obsh">СНИЛС*</label>
-                    <input type="password" class="forms4" id="inputPassword5" placeholder="000 000 000 00">
+                    <input type="text" class="forms4" id="inputPassword5" placeholder="000 000 000 00">
                 </div>
 
                 <div class="famil">
                     <label for="inputEmail41" class="txt_obsh">Фамилия*</label>
-                    <input type="email" class="forms4" id="inputEmail41" placeholder="Фамилия">
+                    <input type="text" class="forms4" id="inputEmail41" placeholder="Фамилия">
                 </div>
 
                 <div class="name">
                     <label for="inputPassword51" class="txt_obsh">Имя*</label>
-                    <input type="password" class="forms4" id="inputPassword51" placeholder="Имя">
+                    <input type="text" class="forms4" id="inputPassword51" placeholder="Имя">
                 </div>
 
                 <div class="otch">
                     <label for="inputPassword41" class="txt_obsh">Отчество*</label>
-                    <input type="password" class="forms4" id="inputPassword41" placeholder="Отчество">
+                    <input type="text" class="forms4" id="inputPassword41" placeholder="Отчество">
                 </div>
 
         <div class="pcht_adres2">
@@ -109,12 +109,12 @@
 
         <div class="email2">
             <label for="inputAddress3" class="txt_obsh">Электронная почта*</label>
-            <input type="text" class="forms" id="inputAddress3" placeholder="Электронная почта">
+            <input type="email" class="forms" id="inputAddress3" placeholder="Электронная почта">
         </div>
 
                 <div class="email2_2">
                     <label for="inputAddress23" class="txt_obsh">Повторите адрес электронной почты*</label>
-                    <input type="text" class="forms3" id="inputAddress23" placeholder="Повторите адрес электронной почты">
+                    <input type="email" class="forms3" id="inputAddress23" placeholder="Повторите адрес электронной почты">
                 </div>
 
                 <p class="pass">Паспортные данные </p>
