--- a/src/main/resources/reg_uchastnikov/reg_fl.html
+++ b/src/main/resources/reg_uchastnikov/reg_fl.html
@@ -80,22 +80,22 @@
 
                 <div class="codorg">
                     <label for="inputPassword5" class="txt_obsh">СНИЛС*</label>
-                    <input type="password" class="forms4" id="inputPassword5" placeholder="000 000 000 00">
+                    <input type="text" class="forms4" id="inputPassword5" placeholder="000 000 000 00">
                 </div>
 
                 <div class="famil">
                     <label for="inputEmail41" class="txt_obsh">Фамилия*</label>
-                    <input type="email" class="forms4" id="inputEmail41" placeholder="Фамилия">
+                    <input type="text" class="forms4" id="inputEmail41" placeholder="Фамилия">
                 </div>
 
                 <div class="name">
                     <label for="inputPassword51" class="txt_obsh">Имя*</label>
-                    <input type="password" class="forms4" id="inputPassword51" placeholder="Имя">
+                    <input type="text" class="forms4" id="inputPassword51" placeholder="Имя">
                 </div>
 
                 <div class="otch">
                     <label for="inputPassword41" class="txt_obsh">Отчество*</label>
-                    <input type="password" class="forms4" id="inputPassword41" placeholder="Отчество">
+                    <input type="text" class="forms4" id="inputPassword41" placeholder="Отчество">
                 </div>
 
         <div class="pcht_adres2">
@@ -114,7 +114,7 @@
 
                 <div class="email2_2">
                     <label for="inputAddress23" class="txt_obsh">Повторите адрес электронной почты*</label>
-                    <input type="text" class="forms3" id="inputAddress23" placeholder="Повторите адрес электронной почты">
+                    <input type="email" class="forms3" id="inputAddress23" placeholder="Повторите адрес электронной почты">
                 </div>
 
                 <p class="pass">Паспортные данные </p>
