--- a/src/main/resources/signin.html
+++ b/src/main/resources/signin.html
@@ -28,18 +28,20 @@
 <h2>Регистрация нового пользователя</h2>
     <div class="sign_block">
       <p>Выберите роль пользователя на ЭТП</p>
-      <ul>
-        <li class="heading">Участник собрания</li>
-        <li class="option"><input type="checkbox" class="check"/><a>Юридическое лицо</a></li>
-        <li class="option"><input type="checkbox" class="check"/><a>Индивидуальный предприниматель</a></li>
-        <li class="option"><input type="checkbox" class="check"/><a>Физическое лицо</a></li>
-        <li class="heading">Участник собрания</li>
-        <li class="option"><input type="checkbox" class="check"/><a>Юридическое лицо</a></li>
-        <li class="option"><input type="checkbox" class="check"/><a>Индивидуальный предприниматель</a></li>
-        <li class="option"><input type="checkbox" class="check"/><a>Физическое лицо</a></li>
-        <li class="option"><input type="checkbox" class="check"/><a>Арбитражный управляющий</a></li>
-        <li><input type="submit" value="Далее" class="sub_btn"/></li>
-      </ul>
+      <form>
+        <ul>
+          <li class="heading">Участник собрания</li>
+          <li class="option"><input type="checkbox" class="check" id="check1" onclick="selectOnlyThis(this.id)"/><a>Юридическое лицо</a></li>
+          <li class="option"><input type="checkbox" class="check" id="check2" onclick="selectOnlyThis(this.id)"/><a>Индивидуальный предприниматель</a></li>
+          <li class="option"><input type="checkbox" class="check" id="check3" onclick="selectOnlyThis(this.id)"/><a>Физическое лицо</a></li>
+          <li class="heading">Организатор собрания</li>
+          <li class="option"><input type="checkbox" class="check" id="check4" onclick="selectOnlyThis(this.id)"/><a>Юридическое лицо</a></li>
+          <li class="option"><input type="checkbox" class="check" id="check5" onclick="selectOnlyThis(this.id)"/><a>Индивидуальный предприниматель</a></li>
+          <li class="option"><input type="checkbox" class="check" id="check6" onclick="selectOnlyThis(this.id)"/><a>Физическое лицо</a></li>
+          <li class="option"><input type="checkbox" class="check" id="check7" onclick="selectOnlyThis(this.id)"/><a>Арбитражный управляющий</a></li>
+          <li class="sub_btn"><a id="next" href="">Далее</a></li>
+        </ul>
+      </form>
     </div>
 
     <div class="base_bg"></div>
@@ -61,5 +63,6 @@
 <script src="jquery/jquery-3.6.0.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/jquery.maskedinput@1.4.1/src/jquery.maskedinput.min.js" type="text/javascript"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+<script src="scripts/reg_choice.js"></script>
 </body>
 </html>
