--- a/src/main/resources/reg_uchastnikov/reg_ql.html
+++ b/src/main/resources/reg_uchastnikov/reg_ql.html
@@ -51,20 +51,20 @@
 
     <div class="gal">
             <div class="form-check">
-                <input class="kub1" type="checkbox" value="" id="flexCheckDefault1">
-                <label class="gal_txt1" for="flexCheckDefault1">
+                <input class="kub1" type="checkbox" value="" id="check1">
+                <label class="gal_txt1" for="check1">
                     Прошу зарегистрировать меня в качестве участника собрания кредиторов*
                 </label>
             </div>
             <div class="form-check">
-                <input class="kub2" type="checkbox" value="" id="flexCheckDefault2">
-                <label class="gal_txt2" for="flexCheckDefault2">
+                <input class="kub2" type="checkbox" value="" id="check2">
+                <label class="gal_txt2" for="check2">
                     Настоящим сообщаю об ознакомлении и согласии с правилами, содержащимися в Регламенте электронной площадки*
                 </label>
             </div>
             <div class="form-check">
-                <input class="kub3" type="checkbox" value="" id="flexCheckDefault3">
-                <label class="gal_txt3" for="flexCheckDefault3">
+                <input class="kub3" type="checkbox" value="" id="check3">
+                <label class="gal_txt3" for="check3">
                     Настоящим подтверждаю свое согласие на обработку персональных данных необходимых для регистрации на электронной площадке*                </label>
             </div>
     </div>
@@ -74,47 +74,47 @@
                 <p class="inf_ob_uch">Информация об участнике собрания</p>
 
         <div class="unn">
-            <label for="inputEmail4" class="txt_obsh">ИНН*</label>
-            <input type="text" class="forms" id="inputEmail4" placeholder="000000000000000">
+            <label for="form1" class="txt_obsh">ИНН*</label>
+            <input type="text" class="forms" id="form1" placeholder="000000000000000">
         </div>
         <div class="codorg">
-            <label for="inputPassword4" class="txt_obsh">Код ОГРН*</label>
-            <input type="text" class="forms3" id="inputPassword4" placeholder="000000000000000">
+            <label for="form2" class="txt_obsh">Код ОГРН*</label>
+            <input type="text" class="forms3" id="form2" placeholder="000000000000000">
         </div>
         <div class="poln_naim">
-            <label for="inputAddress" class="txt_obsh">Полное наименование*</label>
-            <input type="text" class="forms2" id="inputAddress" placeholder="Полное наименование">
+            <label for="form3" class="txt_obsh">Полное наименование*</label>
+            <input type="text" class="forms2" id="form3" placeholder="Полное наименование">
         </div>
         <div class="qr_adres">
-            <label for="inputAddress2" class="txt_obsh">Юридический адрес*</label>
-            <input type="text" class="forms2" id="inputAddress2" placeholder="Юридический адрес">
+            <label for="form4" class="txt_obsh">Юридический адрес*</label>
+            <input type="text" class="forms2" id="form4" placeholder="Юридический адрес">
         </div>
 
         <div class="pcht_adres">
-            <label for="inputAddress2" class="txt_obsh">Почтовый адрес*</label>
-            <input type="text" class="forms2" id="inputAddress3" placeholder="Почтовый адрес">
+            <label for="form5" class="txt_obsh">Почтовый адрес*</label>
+            <input type="text" class="forms2" id="form5" placeholder="Почтовый адрес">
         </div>
 
         <div class="telefon">
-            <label for="inputAddress2" class="txt_obsh">Телефон*</label>
-            <input type="text" class="forms" id="inputAddress4" placeholder="+7 (900) 000-12-34">
+            <label for="form6" class="txt_obsh">Телефон*</label>
+            <input type="text" class="forms" id="form6" placeholder="+7 (900) 000-12-34">
         </div>
 
 
         <div class="email">
-            <label for="inputState" class="txt_obsh">Электронная почта*</label>
-            <input type="email" class="forms" id="inputState" placeholder="Электронная почта">
+            <label for="form7" class="txt_obsh">Электронная почта*</label>
+            <input type="email" class="forms" id="form7" placeholder="Электронная почта">
         </div>
 
         <div class="email_2">
-            <label for="inputZip" class="txt_obsh">Повторите адрес электронной почты*</label>
-            <input type="email" class="forms3" id="inputZip" placeholder="Повторите адрес электронной почты">
+            <label for="form8" class="txt_obsh">Повторите адрес электронной почты*</label>
+            <input type="email" class="forms3" id="form8" placeholder="Повторите адрес электронной почты">
         </div>
 <div>
     <img src="/img/add%201%20(Traced).svg" class="doks2"/>
 
 
-                <button type="button" class="knopka">Сохранить и подтвердить e-mail</button>
+                <button type="button" class="knopka" onclick="Validate()">Сохранить и подтвердить e-mail</button>
 </div>
 
                 <p class="prikrepit-dokument">Прикрепить документ</p>
@@ -154,7 +154,9 @@
         </div>
     </div>
 
-    <script src="../../../../../11/SK_J/src/main/resources/jquery/jquery-3.6.0.js"></script>
+    <script src="/jquery/jquery-3.6.0.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+    <script src="/scripts/form_data.js"></script>
+
 </body>
 </html>
