--- a/src/main/resources/reg_uchastnikov/reg_ip.html
+++ b/src/main/resources/reg_uchastnikov/reg_ip.html
@@ -73,47 +73,47 @@
                         <p class="inf_ob_uch">Информация об участнике собрания</p>
 
         <div class="unn2">
-            <label for="inputEmail4" class="txt_obsh">ИНН*</label>
-            <input type="email" class="forms4" id="inputEmail4" placeholder="000000000000">
+            <label for="inn" class="txt_obsh">ИНН*</label>
+            <input type="email" class="forms4" id="inn" placeholder="000000000000">
         </div>
 
                 <div class="snils">
-                    <label for="inputPassword5" class="txt_obsh">СНИЛС*</label>
-                    <input type="text" class="forms4" id="inputPassword5" placeholder="000 000 000 00">
+                    <label for="snils" class="txt_obsh">СНИЛС*</label>
+                    <input type="text" class="forms4" id="snils" placeholder="000 000 000 00">
                 </div>
 
         <div class="codorg2">
-            <label for="inputPassword4" class="txt_obsh">Код ОГРН*</label>
-            <input type="text" class="forms4" id="inputPassword4" placeholder="000000000000000">
+            <label for="ogrnip" class="txt_obsh">Код ОГРН*</label>
+            <input type="text" class="forms4" id="ogrnip" placeholder="000000000000000">
         </div>
 
                 <div class="famil">
-                    <label for="inputEmail41" class="txt_obsh">Фамилия*</label>
-                    <input type="text" class="forms4" id="inputEmail41" placeholder="Фамилия">
+                    <label for="famil" class="txt_obsh">Фамилия*</label>
+                    <input type="text" class="forms4" id="famil" placeholder="Фамилия">
                 </div>
 
                 <div class="name">
-                    <label for="inputPassword51" class="txt_obsh">Имя*</label>
-                    <input type="text" class="forms4" id="inputPassword51" placeholder="Имя">
+                    <label for="name" class="txt_obsh">Имя*</label>
+                    <input type="text" class="forms4" id="name" placeholder="Имя">
                 </div>
 
                 <div class="otch">
-                    <label for="inputPassword41" class="txt_obsh">Отчество*</label>
-                    <input type="text" class="forms4" id="inputPassword41" placeholder="Отчество">
+                    <label for="otch" class="txt_obsh">Отчество*</label>
+                    <input type="text" class="forms4" id="otch" placeholder="Отчество">
                 </div>
 
         <div class="pcht_adres2">
-            <label for="inputAddress" class="txt_obsh">Почтовый адрес*</label>
-            <input type="text" class="forms2" id="inputAddress" placeholder="Почтовый адрес">
+            <label for="pocht_adres" class="txt_obsh">Почтовый адрес*</label>
+            <input type="text" class="forms2" id="pocht_adres" placeholder="Почтовый адрес">
         </div>
         <div class="telefon2">
-            <label for="inputAddress2" class="txt_obsh">Телефон*</label>
-            <input type="text" class="forms" id="inputAddress2" placeholder="+7 (900) 000-12-34">
+            <label for="phone" class="txt_obsh">Телефон*</label>
+            <input type="text" class="forms" id="phone" placeholder="+7 (900) 000-12-34">
         </div>
 
         <div class="email2">
-            <label for="inputAddress3" class="txt_obsh">Электронная почта*</label>
-            <input type="email" class="forms" id="inputAddress3" placeholder="Электронная почта">
+            <label for="email" class="txt_obsh">Электронная почта*</label>
+            <input type="email" class="forms" id="email" placeholder="Электронная почта">
         </div>
 
                 <div class="email2_2">
