--- a/src/main/resources/reg_organizatorov/reg_org_ay.html
+++ b/src/main/resources/reg_organizatorov/reg_org_ay.html
@@ -36,7 +36,7 @@
     <div class="viewport">
         <div class="login_container">
             <div class="login_block">
-                    <p class="reg_uch">Регистрация организатора АУ </p>
+                    <p class="reg_uch" id="ogl">Регистрация организатора АУ </p>
 
                     <div class="reg_uch_txt">Для регистрации на электронной площадке Вам следует заполнить приведённую ниже форму. По результатам рассмотрения заявления Вам будет направлено уведомление на указанный в форме адрес электронной почты.
                         <p>
