--- a/src/main/resources/reg_organizatorov/reg_org_ql.html
+++ b/src/main/resources/reg_organizatorov/reg_org_ql.html
@@ -36,7 +36,7 @@
 
 
 
-    <p class="reg_uch">Регистрация организатора ЮЛ</p>
+    <p class="reg_uch" id="ogl">Регистрация организатора ЮЛ</p>
 
 
     <div class="reg_uch_txt">Для регистрации на электронной площадке Вам следует заполнить приведённую ниже форму. По результатам рассмотрения заявления Вам будет направлено уведомление на указанный в форме адрес электронной почты.
