--- a/src/main/resources/reg_uchastnikov/reg_fl.html
+++ b/src/main/resources/reg_uchastnikov/reg_fl.html
@@ -37,7 +37,7 @@
     <div class="viewport">
         <div class="login_container">
             <div class="login_block">
-                    <p class="reg_uch">Регистрация участника ФЛ </p>
+                    <p class="reg_uch" id="ogl">Регистрация участника ФЛ </p>
 
                     <div class="reg_uch_txt">Для регистрации на электронной площадке Вам следует заполнить приведённую ниже форму. По результатам рассмотрения заявления Вам будет направлено уведомление на указанный в форме адрес электронной почты.
                         <p>
