--- a/src/main/resources/reg_uchastnikov/reg_ip.html
+++ b/src/main/resources/reg_uchastnikov/reg_ip.html
@@ -36,7 +36,7 @@
     <div class="viewport">
         <div class="login_container">
             <div class="login_block">
-                    <p class="reg_uch">Регистрация участника ИП </p>
+                    <p class="reg_uch" id="ogl">Регистрация участника ИП </p>
 
                     <div class="reg_uch_txt">Для регистрации на электронной площадке Вам следует заполнить приведённую ниже форму. По результатам рассмотрения заявления Вам будет направлено уведомление на указанный в форме адрес электронной почты.
                         <p>
@@ -64,7 +64,7 @@
                         <div class="form-check">
                             <input class="kub3" type="checkbox" value="" id="flexCheckDefault3">
                             <label class="gal_txt3" for="flexCheckDefault3">
-                                Настоящим подтверждаю свое согласие на обработку персональных данных необходимых для регистрации на электронной площадке*                </label>
+                                Настоящим подтверждаю свое согласие на обработку персональных данных необходимых для регистрации на электронной площадке*</label>
                         </div>
                     </div>
 
