--- a/src/main/resources/reg_organizatorov/reg_org_ql.html
+++ b/src/main/resources/reg_organizatorov/reg_org_ql.html
@@ -114,7 +114,7 @@
     <img src="/img/add%201%20(Traced).svg" class="doks2"/>
 
 
-                <button type="button" class="knopka">Сохранить и подтвердить e-mail</button>
+                <button type="button" class="knopka" onclick="Validate_ul()">Сохранить и подтвердить e-mail</button>
 </div>
 
                 <p class="prikrepit-dokument">Прикрепить документ</p>
