--- a/src/main/resources/reg_uchastnikov/reg_fl.html
+++ b/src/main/resources/reg_uchastnikov/reg_fl.html
@@ -145,7 +145,7 @@
                         <div>
     <img src="/img/add%201%20(Traced).svg" class="doks2_2"/>
 
-    <button type="button" class="knopka2">Сохранить и подтвердить e-mail</button>
+    <button type="button" class="knopka2" onclick="Validate_ul()">Сохранить и подтвердить e-mail</button>
 
 </div>
         <p class="doks_2">Документы</p>
