--- a/src/main/resources/reg_uchastnikov/reg_ip.html
+++ b/src/main/resources/reg_uchastnikov/reg_ip.html
@@ -125,22 +125,22 @@
 
 
                 <div class="seria">
-            <label for="inputAddress47" class="txt_obsh">Серия*</label>
-            <input type="text" class="forms4" id="inputAddress47" placeholder="00 00">
+            <label for="ser" class="txt_obsh">Серия*</label>
+            <input type="text" class="forms4" id="ser" placeholder="00 00">
         </div>
                 <div class="nomer">
-                    <label for="inputAddress49" class="txt_obsh">Номер*</label>
-                    <input type="text" class="forms4" id="inputAddress49" placeholder="000 000">
+                    <label for="num" class="txt_obsh">Номер*</label>
+                    <input type="text" class="forms4" id="num" placeholder="000 000">
                 </div>
                 <div class="data_vidochi">
-                    <label for="inputAddress09" class="txt_obsh">Дата выдачи*</label>
-                    <input type="text" class="forms4" id="inputAddress09" placeholder="01.01.0000">
+                    <label for="vidacha" class="txt_obsh">Дата выдачи*</label>
+                    <input type="text" class="forms4" id="vidacha" placeholder="01.01.0000">
                 </div>
 
 
         <div class="vidan">
-            <label for="inputState" class="txt_obsh">Кем выдан*</label>
-            <input type="text" class="forms2" id="inputState" placeholder="Кем выдан">
+            <label for="kem_vudan" class="txt_obsh">Кем выдан*</label>
+            <input type="text" class="forms2" id="kem_vudan" placeholder="Кем выдан">
         </div>
 
                         <p class="prikrepit-dokument2">Прикрепить документ</p>
@@ -188,7 +188,8 @@
                     </div>
                 </div>
 
-    <script src="../../../../../11/SK_J/src/main/resources/jquery/jquery-3.6.0.js"></script>
+    <script src="/jquery/jquery-3.6.0.js"></script>
+            <script src="/scripts/validate_ul.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
