--- a/src/main/resources/reg_uchastnikov/reg_ql.html
+++ b/src/main/resources/reg_uchastnikov/reg_ql.html
@@ -155,7 +155,24 @@
     </div>
 
     <script src="/jquery/jquery-3.6.0.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     <script src="/scripts/validate_ul.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery.maskedinput@1.4.1/src/jquery.maskedinput.min.js" type="text/javascript"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+    <script>
+        $(document).ready(function() {
+            $.mask.definitions['0'] = "[0-9]";
+            $("#inn").mask("0000000000");
+        });
+
+        $(document).ready(function() {
+            $.mask.definitions['0'] = "[0-9]";
+            $("#ogrn").mask("0000000000000");
+        });
+
+        $(document).ready(function() {
+            $.mask.definitions['0'] = "[0-9]";
+            $("#phone").mask("+7(000)-000-00-00");
+        });
+    </script>
 </body>
 </html>
