--- a/src/main/resources/lichnui_kobinetu/lk_uch/o_sobr/o_sobr_uch_8.html
+++ b/src/main/resources/lichnui_kobinetu/lk_uch/o_sobr/o_sobr_uch_8.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="/style/shared.css">
     <link rel="stylesheet" type="text/css" href="/style/o_sobr_uch_8.css">
+    <link rel="stylesheet" type="text/css" href="/style/test.css">
+    <link rel="stylesheet" type="text/css" href="https://comet-server.ru/doc/html_chat.css"></link>
+
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Exo+2">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <title>SK_JS</title>
@@ -21,6 +24,46 @@
         <li class="nav_item"><a href="/signin.html">Зарегистрироваться</a></li>
     </ul>
 </div>
+
+
+
+<div id="player"></div>
+
+<script>
+    var tag = document.createElement('script');
+
+    tag.src = "https://www.youtube.com/iframe_api";
+    var firstScriptTag = document.getElementsByTagName('script')[0];
+    firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+
+    var player;
+    function onYouTubeIframeAPIReady() {
+        player = new YT.Player('player', {
+            height: '360',
+            width: '640',
+            videoId: 'zv0v_QJwiVE',
+            events: {
+                'onReady': onPlayerReady,
+                'onStateChange': onPlayerStateChange
+            }
+        });
+    }
+
+    function onPlayerReady(event) {
+        event.target.playVideo();
+    }
+
+    var done = false;
+    function onPlayerStateChange(event) {
+        if (event.data == YT.PlayerState.PLAYING && !done) {
+            setTimeout(stopVideo, 6000);
+            done = true;
+        }
+    }
+    function stopVideo() {
+        player.stopVideo();
+    }
+</script>
 
 <div class="container">
     <div class="content">
