--- a/src/main/resources/reg_organizatorov/reg_org_ql.html
+++ b/src/main/resources/reg_organizatorov/reg_org_ql.html
@@ -107,15 +107,14 @@
         </div>
 
         <div class="email_2">
-            <label for="form8" class="txt_obsh">Повторите адрес электронной почты*</label>
-            <input type="email" class="forms3" id="form8" placeholder="Повторите адрес электронной почты">
+            <label for="email_2" class="txt_obsh">Повторите адрес электронной почты*</label>
+            <input type="email" class="forms3" id="email_2" placeholder="Повторите адрес электронной почты">
         </div>
 <div>
     <img src="/img/add%201%20(Traced).svg" class="doks2"/>
 
 
-                <button type="button" class="knopka" onclick="Validate_ul()">Сохранить и подтвердить e-mail</button>
-</div>
+    <button type="button" class="knopka" onclick="Validate_ul()">Сохранить и подтвердить e-mail</button>'</div>
 
                 <p class="prikrepit-dokument">Прикрепить документ</p>
 
@@ -159,6 +158,7 @@
     </div>
 
     <script src="../../../../../11/SK_J/src/main/resources/jquery/jquery-3.6.0.js"></script>
+    <script src="/scripts/validate_ul.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     <script src="/scripts/validate_ul.js"></script>
 </body>
