--- a/src/main/resources/reg_uchastnikov/reg_fl.html
+++ b/src/main/resources/reg_uchastnikov/reg_fl.html
@@ -75,12 +75,12 @@
 
         <div class="unn">
             <label for="inn" class="txt_obsh">ИНН*</label>
-            <input type="email" class="forms4" id="inn" placeholder="000000000000">
+            <input type="email" class="forms" id="inn" placeholder="000000000000">
         </div>
 
                 <div class="codorg">
                     <label for="snils" class="txt_obsh">СНИЛС*</label>
-                    <input type="text" class="forms4" id="snils" placeholder="000 000 000 00">
+                    <input type="text" class="forms3" id="snils" placeholder="000 000 000 00">
                 </div>
 
                 <div class="famil">
@@ -95,7 +95,7 @@
 
                 <div class="otch">
                     <label for="otch" class="txt_obsh">Отчество*</label>
-                    <input type="text" class="forms4" id="otch" placeholder="Отчество">
+                    <input type="text" class="forms5" id="otch" placeholder="Отчество">
                 </div>
 
         <div class="pcht_adres2">
@@ -113,8 +113,8 @@
         </div>
 
                 <div class="email2_2">
-                    <label for="inputAddress23" class="txt_obsh">Повторите адрес электронной почты*</label>
-                    <input type="email" class="forms3" id="inputAddress23" placeholder="Повторите адрес электронной почты">
+                    <label for="email_2" class="txt_obsh">Повторите адрес электронной почты*</label>
+                    <input type="email" class="forms3" id="email_2" placeholder="Повторите адрес электронной почты">
                 </div>
 
                 <p class="pass">Паспортные данные </p>
@@ -145,7 +145,7 @@
                         <div>
     <img src="/img/add%201%20(Traced).svg" class="doks2_2"/>
 
-    <button type="button" class="knopka2" onclick="Validate_ul()">Сохранить и подтвердить e-mail</button>
+                <button type="button" class="knopka2" onclick="Validate_ul()">Сохранить и подтвердить e-mail</button>'
 
 </div>
         <p class="doks_2">Документы</p>
@@ -181,6 +181,7 @@
     <div class="table">
         <div class="table_item"></div>
     </div>
+    <script src="/scripts/validate_ul.js"></script>
     <script src="../../../../../11/SK_J/src/main/resources/jquery/jquery-3.6.0.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
