--- a/src/main/resources/reg_uchastnikov/reg_ip.html
+++ b/src/main/resources/reg_uchastnikov/reg_ip.html
@@ -50,20 +50,20 @@
 
                     <div class="gal">
                         <div class="form-check">
-                            <input class="kub1" type="checkbox" value="" id="flexCheckDefault1">
-                            <label class="gal_txt1" for="flexCheckDefault1">
+                            <input class="kub1" type="checkbox" value="" id="check1">
+                            <label class="gal_txt1" for="check1">
                                 Прошу зарегистрировать меня в качестве участника собрания кредиторов*
                             </label>
                         </div>
                         <div class="form-check">
-                            <input class="kub2" type="checkbox" value="" id="flexCheckDefault2">
-                            <label class="gal_txt2" for="flexCheckDefault2">
+                            <input class="kub2" type="checkbox" value="" id="check2">
+                            <label class="gal_txt2" for="check2">
                                 Настоящим сообщаю об ознакомлении и согласии с правилами, содержащимися в Регламенте электронной площадки*
                             </label>
                         </div>
                         <div class="form-check">
-                            <input class="kub3" type="checkbox" value="" id="flexCheckDefault3">
-                            <label class="gal_txt3" for="flexCheckDefault3">
+                            <input class="kub3" type="checkbox" value="" id="check3">
+                            <label class="gal_txt3" for="check3">
                                 Настоящим подтверждаю свое согласие на обработку персональных данных необходимых для регистрации на электронной площадке*</label>
                         </div>
                     </div>
@@ -117,8 +117,8 @@
         </div>
 
                 <div class="email2_2">
-                    <label for="inputAddress23" class="txt_obsh">Повторите адрес электронной почты*</label>
-                    <input type="email" class="forms3" id="inputAddress23" placeholder="Повторите адрес электронной почты">
+                    <label for="email_2" class="txt_obsh">Повторите адрес электронной почты*</label>
+                    <input type="email" class="forms3" id="email_2" placeholder="Повторите адрес электронной почты">
                 </div>
 
                 <p class="pass">Паспортные данные </p>
@@ -187,9 +187,13 @@
                         </div>
                     </div>
                 </div>
+        </div>
+    </div>
+    </div>
+
 
     <script src="/jquery/jquery-3.6.0.js"></script>
-            <script src="/scripts/validate_ul.js"></script>
+    <script src="/scripts/validate_ul.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
