--- a/src/main/resources/reg_uchastnikov/reg_ql.html
+++ b/src/main/resources/reg_uchastnikov/reg_ql.html
@@ -107,8 +107,8 @@
         </div>
 
         <div class="email_2">
-            <label for="form8" class="txt_obsh">Повторите адрес электронной почты*</label>
-            <input type="email" class="forms3" id="form8" placeholder="Повторите адрес электронной почты">
+            <label for="email_2" class="txt_obsh">Повторите адрес электронной почты*</label>
+            <input type="email" class="forms3" id="email_2" placeholder="Повторите адрес электронной почты">
         </div>
 <div>
     <img src="/img/add%201%20(Traced).svg" class="doks2"/>
