--- a/src/main/resources/reg_organizatorov/reg_org_ay.html
+++ b/src/main/resources/reg_organizatorov/reg_org_ay.html
@@ -50,20 +50,20 @@
 
                     <div class="gal">
                         <div class="form-check">
-                            <input class="kub1" type="checkbox" value="" id="flexCheckDefault1">
-                            <label class="gal_txt1" for="flexCheckDefault1">
+                            <input class="kub1" type="checkbox" value="" id="check1">
+                            <label class="gal_txt1" for="check1">
                                 Прошу зарегистрировать меня в качестве участника собрания кредиторов*
                             </label>
                         </div>
                         <div class="form-check">
-                            <input class="kub2" type="checkbox" value="" id="flexCheckDefault2">
-                            <label class="gal_txt2" for="flexCheckDefault2">
+                            <input class="kub2" type="checkbox" value="" id="check2">
+                            <label class="gal_txt2" for="check2">
                                 Настоящим сообщаю об ознакомлении и согласии с правилами, содержащимися в Регламенте электронной площадки*
                             </label>
                         </div>
                         <div class="form-check">
-                            <input class="kub3" type="checkbox" value="" id="flexCheckDefault3">
-                            <label class="gal_txt3" for="flexCheckDefault3">
+                            <input class="kub3" type="checkbox" value="" id="check3">
+                            <label class="gal_txt3" for="check3">
                                 Настоящим подтверждаю свое согласие на обработку персональных данных необходимых для регистрации на электронной площадке*                </label>
                         </div>
                     </div>
@@ -122,30 +122,30 @@
         </div>
 
                 <div class="email2_2">
-                    <label for="inputAddress23" class="txt_obsh">Повторите адрес электронной почты*</label>
-                    <input type="email" class="forms3" id="inputAddress23" placeholder="Повторите адрес электронной почты">
+                    <label for="email_2" class="txt_obsh">Повторите адрес электронной почты*</label>
+                    <input type="email" class="forms3" id="email_2" placeholder="Повторите адрес электронной почты">
                 </div>
 
                 <p class="pass">Паспортные данные </p>
 
 
                 <div class="seria">
-            <label for="inputAddress47" class="txt_obsh">Серия*</label>
-            <input type="text" class="forms4" id="inputAddress47" placeholder="00 00">
+            <label for="ser" class="txt_obsh">Серия*</label>
+            <input type="text" class="forms4" id="ser" placeholder="00 00">
         </div>
                 <div class="nomer">
-                    <label for="inputAddress49" class="txt_obsh">Номер*</label>
-                    <input type="text" class="forms4" id="inputAddress49" placeholder="000 000">
+                    <label for="num" class="txt_obsh">Номер*</label>
+                    <input type="text" class="forms4" id="num" placeholder="000 000">
                 </div>
                 <div class="data_vidochi">
-                    <label for="inputAddress09" class="txt_obsh">Дата выдачи*</label>
-                    <input type="text" class="forms4" id="inputAddress09" placeholder="01.01.0000">
+                    <label for="vidacha" class="txt_obsh">Дата выдачи*</label>
+                    <input type="text" class="forms4" id="vidacha" placeholder="01.01.0000">
                 </div>
 
 
         <div class="vidan">
-            <label for="inputState" class="txt_obsh">Кем выдан*</label>
-            <input type="text" class="forms2" id="inputState" placeholder="Кем выдан">
+            <label for="kem_vudan" class="txt_obsh">Кем выдан*</label>
+            <input type="text" class="forms2" id="kem_vudan" placeholder="Кем выдан">
         </div>
 
                         <p class="prikrepit-dokument2">Прикрепить документ</p>
@@ -192,8 +192,12 @@
                         </div>
                     </div>
                 </div>
+        </div>
+    </div>
+    </div>
 
-    <script src="../../../../../11/SK_J/src/main/resources/jquery/jquery-3.6.0.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+<script src="/jquery/jquery-3.6.0.js"></script>
+<script src="/scripts/validate_ul.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
