--- a/src/main/resources/reg_organizatorov/reg_org_ay.html
+++ b/src/main/resources/reg_organizatorov/reg_org_ay.html
@@ -112,8 +112,8 @@
         </div>
 
         <div class="nazv_org">
-            <label for="inputAddress213" class="txt_obsh">Название саморегулируемой организации*</label>
-            <input type="text" class="forms3" id="inputAddress213" placeholder="Название саморегулируемой организации">
+            <label for="naim_org" class="txt_obsh">Название саморегулируемой организации*</label>
+            <input type="text" class="forms3" id="naim_org" placeholder="Название саморегулируемой организации">
         </div>
 
         <div class="email2">
