--- a/src/main/resources/reg_organizatorov/reg_org_ip.html
+++ b/src/main/resources/reg_organizatorov/reg_org_ip.html
@@ -143,15 +143,16 @@
             <input type="text" class="forms2" id="kem_vudan" placeholder="Кем выдан">
         </div>
 
-                        <p class="prikrepit-dokument2">Прикрепить документ</p>
-
-
+                        <label for="file" class="prikrepit-dokument2 pointer">
+                            Добавить документ
+                            <input type="file" id="file"/>
+                        </label>
 
                         <div>
     <img src="/img/add%201%20(Traced).svg" class="doks2_2"/>
 
 
-    <button type="button" class="knopka2" onclick="Validate_ul()">Сохранить и подтвердить e-mail</button>'
+    <button type="button" class="knopka2" onclick="Validate_reg()">Сохранить и подтвердить e-mail</button>'
 </div>
         <p class="doks_2">Документы</p>
 
@@ -191,7 +192,7 @@
     </div>
 
     <script src="/jquery/jquery-3.6.0.js"></script>
-    <script src="/scripts/validate_ul.js"></script>
+    <script src="/scripts/validate_reg.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery.maskedinput@1.4.1/src/jquery.maskedinput.min.js" type="text/javascript"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 <script>
