--- a/src/main/resources/login.html
+++ b/src/main/resources/login.html
@@ -29,11 +29,11 @@
         <div class="pwd_block">
             <ul>
                 <li class="text">Логин</li>
-                <li><input type="text" placeholder="Логин" class="form_f"/></li>
+                <li><input type="text" placeholder="Логин" class="form_f" id="email"/></li>
                 <li class="text">Пароль</li>
-                <li><input type="password" placeholder="Пароль" class="form_f"/></li>
+                <li><input type="password" placeholder="Пароль" class="form_f" id="pwd"/></li>
                 <li class="remember"><input type="checkbox" class="check"/><a>Запомнить меня</a></li>
-                <li><input type="submit" value="Войти" class="sgn_btn"/></li>
+                <li><input type="submit" value="Войти" class="sgn_btn" onclick="Validate_login()"/></li>
                 <li class="link1">Зарегистрироваться</li>
                 <li class="link2">Забыли пароль?</li>
             </ul>
@@ -58,5 +58,6 @@
 <script src="jquery/jquery-3.6.0.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/jquery.maskedinput@1.4.1/src/jquery.maskedinput.min.js" type="text/javascript"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+<script src="scripts/validate_login.js"></script>
 </body>
 </html>
