--- a/src/main/resources/reg_organizatorov/reg_org_ql.html
+++ b/src/main/resources/reg_organizatorov/reg_org_ql.html
@@ -114,9 +114,12 @@
     <img src="/img/add%201%20(Traced).svg" class="doks2"/>
 
 
-    <button type="button" class="knopka" onclick="Validate_ul()">Сохранить и подтвердить e-mail</button>'</div>
+    <button type="button" class="knopka" onclick="Validate_reg()">Сохранить и подтвердить e-mail</button>'</div>
 
-                <p class="prikrepit-dokument">Прикрепить документ</p>
+                <label for="file" class="prikrepit-dokument pointer">
+                    Добавить документ
+                    <input type="file" id="file"/>
+                </label>
 
         <p class="doks">Документы</p>
 
@@ -158,7 +161,7 @@
     </div>
 
     <script src="/jquery/jquery-3.6.0.js"></script>
-    <script src="/scripts/validate_ul.js"></script>
+    <script src="/scripts/validate_reg.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery.maskedinput@1.4.1/src/jquery.maskedinput.min.js" type="text/javascript"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 <script>
