--- a/src/main/resources/lichnui_kobinetu/lk_org/lk_org_fl/lk2_org.html
+++ b/src/main/resources/lichnui_kobinetu/lk_org/lk_org_fl/lk2_org.html
@@ -40,7 +40,7 @@
 
             <nav style="--bs-breadcrumb-divider: '';" aria-label="breadcrumb">
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="lk_org.html"><p class="lk_mal">Личные данные</p></li>
+                    <li class="breadcrumb-item"><a href="lk_org.html"><p class="lk_mal">Личные данные</p></a></li>
                     <li class="breadcrumb-item active" aria-current="page"><p class="org_sobr_big">Организация собраний</p></a></li>
                     <li class="breadcrumb-item"><a href="lk3_org.html"><p class="chern_zaiav">Черновики заявок</p></a></li>
                 </ol>
@@ -178,7 +178,7 @@
                 </div>
             </div>
         </div>
-
+    </div>
 
 
         <div class="container">
@@ -190,10 +190,10 @@
                             <li class="base_item1"><a>Выйти</a></li>
                         </ul>
                         <ul class="base_links">
-                            <li class="base_item2"><a class="footer_txt" href="../../main.html" >Главная</a></li>
-                            <li class="base_item2"><a class="footer_txt" href="../../reestr.html">Реестр собраний</a></li>
-                            <li class="base_item2"><a class="footer_txt" href="../../help/help_1.html">Помощь</a></li>
-                            <li class="base_item2"><a class="footer_txt" href="../../help/contacts.html">Контакты</a></li>
+                            <li class="base_item2"><a class="footer_txt" href="../../../main.html" >Главная</a></li>
+                            <li class="base_item2"><a class="footer_txt" href="../../../reestr.html">Реестр собраний</a></li>
+                            <li class="base_item2"><a class="footer_txt" href="../../../help/help_1.html">Помощь</a></li>
+                            <li class="base_item2"><a class="footer_txt" href="../../../help/contacts.html">Контакты</a></li>
                         </ul>
                         <p class="copyright">© 2011-2022 Оператор торговой площадки - ООО «ТендерСтандарт». Все права защищены.</p>
                     </div>
