--- a/src/main/resources/lichnui_kobinetu/lk_uch/lk_uch_ql/lk_uch.html
+++ b/src/main/resources/lichnui_kobinetu/lk_uch/lk_uch_ql/lk_uch.html
@@ -125,10 +125,10 @@
                             <li class="base_item1"><a>Выйти</a></li>
                         </ul>
                         <ul class="base_links">
-                            <li class="base_item2"><a class="footer_txt" href="../../main.html" >Главная</a></li>
-                            <li class="base_item2"><a class="footer_txt" href="../../reestr.html">Реестр собраний</a></li>
-                            <li class="base_item2"><a class="footer_txt" href="../../help/help_1.html">Помощь</a></li>
-                            <li class="base_item2"><a class="footer_txt" href="../../help/contacts.html">Контакты</a></li>
+                            <li class="base_item2"><a class="footer_txt" href="../../../main.html" >Главная</a></li>
+                            <li class="base_item2"><a class="footer_txt" href="../../../reestr.html">Реестр собраний</a></li>
+                            <li class="base_item2"><a class="footer_txt" href="../../../help/help_1.html">Помощь</a></li>
+                            <li class="base_item2"><a class="footer_txt" href="../../../help/contacts.html">Контакты</a></li>
                         </ul>
                         <p class="copyright">© 2011-2022 Оператор торговой площадки - ООО «ТендерСтандарт». Все права защищены.</p>
                     </div>
