--- a/src/main/resources/reg_organizatorov/reg_org_ql.html
+++ b/src/main/resources/reg_organizatorov/reg_org_ql.html
@@ -51,20 +51,20 @@
 
     <div class="gal">
             <div class="form-check">
-                <input class="kub1" type="checkbox" value="" id="flexCheckDefault1">
-                <label class="gal_txt1" for="flexCheckDefault1">
+                <input class="kub1" type="checkbox" value="" id="check1">
+                <label class="gal_txt1" for="check1">
                     Прошу зарегистрировать меня в качестве участника собрания кредиторов*
                 </label>
             </div>
             <div class="form-check">
-                <input class="kub2" type="checkbox" value="" id="flexCheckDefault2">
-                <label class="gal_txt2" for="flexCheckDefault2">
+                <input class="kub2" type="checkbox" value="" id="check2">
+                <label class="gal_txt2" for="check2">
                     Настоящим сообщаю об ознакомлении и согласии с правилами, содержащимися в Регламенте электронной площадки*
                 </label>
             </div>
             <div class="form-check">
-                <input class="kub3" type="checkbox" value="" id="flexCheckDefault3">
-                <label class="gal_txt3" for="flexCheckDefault3">
+                <input class="kub3" type="checkbox" value="" id="check3">
+                <label class="gal_txt3" for="check3">
                     Настоящим подтверждаю свое согласие на обработку персональных данных необходимых для регистрации на электронной площадке*                </label>
             </div>
     </div>
