--- a/src/main/resources/login.html
+++ b/src/main/resources/login.html
@@ -33,7 +33,7 @@
                 <li class="text">Пароль</li>
                 <li><input type="password" placeholder="Пароль" class="form_f" id="pwd"/></li>
                 <li class="remember"><input type="checkbox" class="check"/><a>Запомнить меня</a></li>
-                <li><a href="http://localhost:63342/SK_J/main.html"><input type="submit" value="Войти" class="sgn_btn" onclick="Validate_login()"/></a></li>
+                <li><a ><input type="submit" value="Войти" class="sgn_btn" onclick="Validate_login()"/></a></li>
                 <li class="link1">Зарегистрироваться</li>
                 <li class="link2">Забыли пароль?</li>
             </ul>
